# infrequent-action-recognition

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md
.github/: copilot-instructions.md
config/: inference_config.yaml
config/dataset/: combined.yaml  omnifall.yaml  wanfall.yaml
config/dataset/combined/video/: wanfall-oops-cross-age.yaml  wanfall-oops-cross-bmi.yaml  wanfall-oops-cross-ethnicity.yaml  wanfall-oops-rand.yaml  wanfall-rand-omnifall-cs.yaml
config/dataset/omnifall/video/: all-splits.yaml  all.yaml  caucafall.yaml  cmdfall.yaml  edf.yaml  gmdcsa24.yaml  le2i.yaml  mcfd.yaml  occu.yaml  oops.yaml  staged-cs.yaml  staged-cv.yaml  up-fall.yaml
config/dataset/wanfall/video/: cross-age.yaml  cross-bmi.yaml  cross-ethnicity.yaml  rand.yaml
config/experiment/: debug.yaml  embed.yaml  fewshot.yaml  fewshot_similarity.yaml  model_comparison.yaml  quick_test.yaml  wanfall_cot.yaml  zeroshot.yaml  zeroshot_cot.yaml
config/inference/: cot.yaml  default.yaml
config/model/: internvl.yaml  molmo.yaml  qwenvl.yaml  qwenvl_embed.yaml
config/model/qwen/: instruct.yaml  moe.yaml  thinking.yaml
config/prompt/: baseline.yaml  cot.yaml  default.yaml  embed.yaml  fewshot.yaml
config/sampling/: greedy.yaml  qwen3_instruct.yaml  qwen3_thinking.yaml
config/vllm/: default.yaml
notebooks/: analysis.ipynb  internvl.ipynb  prompts.ipynb  qwen_3_vl_timeline_segmentation.ipynb  qwenvl.ipynb  visualize_embeddings.ipynb
scripts/: analyze_run.py  example_vlms_with_vllm.py  multi.sh  plot_comparison_by_size.py  plot_cot_comparison.py  run_oops_experiments.py  run_prompt_ablations.py  test_load_dataset.py  vllm_inference.py
scripts/ablations/: run_component_ablations.py  run_prompt_ablations.py
scripts/latex/: create_ablation_table.py  create_component_ablation_table.py  create_cross_dataset_table.py  create_latex_table.py
src/falldet/: config.py  embeddings.py  schemas.py  visualization.py
src/falldet/data/: dataset.py  exemplar_sampler.py  hf_utils.py  multi_video_dataset.py  video_dataset.py  video_dataset_factory.py  wanfall_video_dataset.py
src/falldet/evaluation/: __init__.py  base.py  subgroup.py  visual.py
src/falldet/inference/: __init__.py  base.py  conversation.py  engine.py  mock_vllm.py
src/falldet/inference/fewshot/: __init__.py  samplers.py
src/falldet/metrics/: base.py  subgroup.py
src/falldet/utils/: formatting.py  latex.py  logging.py  wandb.py
src/infreqact/: config.py  inference.py  visualization.py
src/infreqact/data/: dataset.py  hf_utils.py  utils.py  video_dataset.py  video_dataset_factory.py  wanfall_video_dataset.py
src/infreqact/evaluation/: base.py  subgroup.py
src/infreqact/inference/: __init__.py  base.py  engine.py  zeroshot.py
src/infreqact/metrics/: base.py
src/infreqact/utils/: predictions.py  wandb.py
tests/: test_schemas.py
tests/config/: test_config.py
tests/data/: test_exemplar_sampler.py  test_video_dataset.py
tests/inference/: test_conversation.py  test_load_video_clip.py  test_prompts.py
tests/inference/fewshot/: test_samplers.py
tests/metrics/: test_base.py
(+54 files in other folders)
