[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "falldet"
version = "0.0.1"
description = "Fall detection using multimodal large language models (MLLMs)"
authors = [
    { name = "Moritz Mistol", email = "moritz.mistol@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
]


[tool.hatch.build.targets.wheel]
packages = ["src/falldet"]


[tool.ruff]
line-length = 100
extend-exclude = ["src/falldet/__init__.py"]
target-version = "py311"

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
extend-ignore = [
    "E402",    # module level import not at top of file
    "E501",    # dont enforce line too long
    "D203",    # One blank line before class docstring
    "D213",    # Multi-line docstring summary should start at the second line
    "SIM108",   # dont always prefer ternary operator
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ty]
# Incremental type checking - start with core inference code only

[tool.ty.src]
include = [
    "src",
    "scripts/vllm_inference.py",
]

exclude = [
    "src/falldet/data/**",
    "src/falldet/evaluation/**",
    "src/falldet/metrics/**",
    "src/falldet/**/*wanfall*",
    "src/falldet/**/*subgroup*",
    "src/falldet/utils/logging.py",
    "src/falldet/utils/wandb.py",
]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.analysis]
# Allow unresolved imports for third-party packages during initial setup
respect-type-ignore-comments = true

[tool.ty.terminal]
# Don't fail on warnings initially - let developers see and fix gradually
error-on-warning = false
output-format = "full"
